--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "shuttleql",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "4.13.3"
   },
   "devDependencies": {
